--- a/index.html
+++ b/index.html
@@ -7,18 +7,29 @@
     <link rel="stylesheet" href="scr/css/style.css">
 </head>
 <body>
+    <header>
+        <div class="uberschrift">
+            <h2>
+                CSS Grid Examples
+            </h2>
+            <div>
+                <img src="scr/images/twitter.png" alt="foto">
+                <img src="scr/images/github.png" alt="foto">
+            </div>
+        </div>
+    </header>
     <div class="main">
-        <div class="box item-1">1</div>
-        <div class="box item-2">2</div>
-        <div class="box item-3">3</div>
-        <div class="box item-4">4</div>
-        <div class="box item-5">5</div>
-        <div class="box item-6">6</div>
-        <div class="box item-7">7</div>
-        <div class="box item-8">8</div>
-        <div class="box item-9">9</div>
-        <div class="box item-10">10</div>
-        <div class="box item-11">11</div>
+        <div class="box item-1">Masonry |</div>
+        <div class="box item-2">Responsive</div>
+        <div class="box item-3">Overlap</div>
+        <div class="box item-4">Fluid</div>
+        <div class="box item-5">Ecplicitly Placed</div>
+        <div class="box item-6">Negative Space</div>
+        <div class="box item-7">Flexible Breadth</div>
+        <div class="box item-8">Masonry||</div>
+        <div class="box item-9">Masonry |||</div>
+        <div class="box item-10">DOM Order</div>
+        <div class="box item-11">Named Tracks</div>
     </div>
     
 </body>
