--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
     </header>
-    <div class="main">
+    <main class="main">
         <div class="box item-1">Masonry |</div>
         <div class="box item-2">Responsive</div>
         <div class="box item-3">Overlap</div>
@@ -30,7 +30,7 @@
         <div class="box item-9">Masonry |||</div>
         <div class="box item-10">DOM Order</div>
         <div class="box item-11">Named Tracks</div>
-    </div>
+    </main>
     
 </body>
 </html>
